# Unity-QuestVuforia

./: .gitattributes  .gitignore  POSITION_OFFSET_INVESTIGATION.md  QUICK_START.md  README.md  mono_crash.0.0.json
Assets/Oculus/: OculusProjectConfig.asset
Assets/Plugins/Android/: AndroidManifest.xml
Assets/Plugins/Android/QuforiaPlugin.androidlib/: .gitignore  build.gradle
Assets/Plugins/Android/QuforiaPlugin.androidlib/src/main/cpp/: CMakeLists.txt  external_camera.cpp  external_tracker.cpp  image_target_tracker.cpp  image_target_tracker.h  model_target_tracker.cpp  model_target_tracker.h  quforia_jni.cpp  vuforia_driver.cpp  vuforia_engine_wrapper.cpp  vuforia_engine_wrapper.h
Assets/Plugins/Android/QuforiaPlugin.androidlib/src/main/java/com/quforia/: QuestVuforiaManager.kt  TrackingResult.kt
Assets/QuestVuforia/: FrameDataValidator.cs  MetaCameraProvider.cs  QuestVuforiaBridge.cs  QuestVuforiaCamera.cs  QuestVuforiaDriverInit.cs  QuestVuforiaTracker.cs  TrackingDebugger.cs
Assets/Resources/: ImmersiveDebuggerSettings.asset  OculusRuntimeSettings.asset  PerformanceTestRunInfo.json  VuforiaConfiguration.asset
Assets/Samples/ImageTarget/: ImageTargetScene.unity
Assets/Scenes/: ImageTargetScene.unity  SampleScene.unity
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
Assets/XR/Settings/: OpenXR Package Settings.asset
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
QuforiaPlugin/: README.md
